Fix align

--- a/src/css/partials/_header.scss
+++ b/src/css/partials/_header.scss
@@ -243,7 +243,7 @@
 			margin-bottom: 0;
 			position: absolute;
 			right: 0;
-			top: 1px;
+			top: 2px;
 		}
 	}
 }
